argocd/manifests/shower/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: shower
  namespace: shower
spec:
  selector:
    app: shower
  ports:
    - name: http
      port: 8000
      targetPort: 8000
      protocol: TCP
